Add code for DC motor
* Add driver.c, motor.c, motor.h, start_motor.sh

* Modify Makefile

* Remove old test_motor.c

* Use start_motor.sh script to invoke the code

* driver.c is the test suite for motor code

--- a/AntzBBB/src/utils/motor/dc_motor/Makefile
+++ b/AntzBBB/src/utils/motor/dc_motor/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -I../../../include/
 DEPS = motor.h
-OBJ = test_motor.o motor.o
+OBJ = driver.o motor.o
 
 %.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
